# mini-actix-react-example

./: .gitignore  LICENSE.MIT  LICENSE.md  Makefile  Procfile  README.md  app.json  babel-plugin-macros.config.js  config-overrides.js  package.json  run.sh  server_build.sh  server_run_local.sh
client/: app.jsx  app.test.jsx  config.js  index.jsx  styles.css  tailwind.config.js
client/components/: about.jsx  articles.jsx  header.jsx  home.jsx  loading.jsx  login.jsx  top.jsx
client/ducks/: index.js
client/ducks/modules/: article.js  index.js  user.js
client/hooks/: auth_provider.jsx
client/lib/: api.js
client/lib/api/: article.js  config.js  user.js
public/: index.html  manifest.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/api/: article.rs  mod.rs  user.rs
server/src/lib/: error.rs
